major changes (UNTESTED (.bat))
add versioning
check for lccll updates
check for llw updates
add downloading function
add llw download
add llw integration for running lc
retain old method of running lc